--- a/empty.html
+++ b/empty.html
@@ -63,6 +63,19 @@
 								<div class="collapse navbar-collapse" id="navbarSupportedContent-4">
 									<ul class="nav nav-item header-icons navbar-nav-right ms-auto">
 										<!-- Theme-Layout -->
+
+										<li class="dropdown header-search">
+											<a class="nav-link icon header-search m-theme" data-bs-toggle="dropdown" href="javascript:void(0);">
+												<i class="bi bi-search"></i>
+											</a>
+											<div class="dropdown-menu">
+												<div class="main-form-search p-2">
+													<input class="form-control" placeholder="Search" type="search">
+													<button class="btn"><i class="mdi mdi-magnify"></i></button>
+												</div>
+											</div>
+										</li>
+
 										<li class="dropdown d-md-flex notifications">
 											<a class="nav-link icon m-theme" data-bs-toggle="dropdown">
 												<i class="mdi mdi-television-guide"></i>
