fixing fullscreen mode

--- a/empty.html
+++ b/empty.html
@@ -40,7 +40,7 @@
 		<div class="page">
 			<div class="page-main">
 
-				<div id="fscreen">
+				<div class="fscreen">
 				<!--Main Header -->
 				<div class="main-header side-header sticky">
 					<div class="container-fluid main-container">
@@ -104,7 +104,7 @@
 										</li>
 
 										<li class="dropdown d-md-flex notifications">
-											<a onclick="var el = document.getElementById('fscreen'); el.requestFullscreen();" class="nav-link icon m-theme" data-bs-toggle="dropdown">
+											<a href="#" title="Fullscreen" data-toggle="fullscreen" class="nav-link icon m-theme">
 												<i class="mdi mdi-arrow-expand"></i>
 											</a>
 										</li>
@@ -192,7 +192,7 @@
 				<!--Main Header -->
 
 				<!-- Sidemenu -->
-				<div class="sticky" id="fscreen1">
+				<div class="sticky fscreen">
 					<aside class="app-sidebar ps horizontal-main" style="height: 100%;">
 						<div class="app-sidebar__header">
 							<a class="main-logo" href="index.html">
@@ -398,7 +398,7 @@
 								</div>
 								<div class="ms-auto">
 									<div>
-										<a href="#" onclick="var el = document.getElementById('fscreen'); el.requestFullscreen();" class="btn btn-primary button-icon me-3 mt-1 mb-1">
+										<a href="#" class="btn btn-primary button-icon me-3 mt-1 mb-1">
 											<span><i class="fa fa-pencil-square-o"></i>More Dashboard</span>
 										</a>
 									</div>
@@ -457,7 +457,6 @@
 
 		<!-- CUSTOM JS -->
 		<script src="assets/js/custom.js"></script>
-
 
 	</body>
 </html>
