edit pill notification

--- a/empty.html
+++ b/empty.html
@@ -119,7 +119,7 @@
 										<li class="dropdown d-md-flex notifications">
 											<a class="nav-link icon m-notif" data-bs-toggle="dropdown">
 												<i class="mdi mdi-bell-outline"></i>
-												<span class="nav-unread badge badge-notif badge-pill">2</span>
+												<span class="notif-menu badge badge-notif badge-pill">10</span>
 											</a>
 											<div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
 												<div class="d-flex justify-content-between align-items-center p-3">
